[gd_scene load_steps=7 format=3 uid="uid://cg8ecqvy0av2f"]

[ext_resource type="Script" path="res://score_screen.gd" id="1_ya0yn"]
[ext_resource type="LabelSettings" uid="uid://bo5wy00ou800" path="res://labels/p1_age.tres" id="2_tyy6m"]
[ext_resource type="Texture2D" uid="uid://dsrh8hv3p5ynj" path="res://art/banner11.png" id="3_6ifuq"]
[ext_resource type="Texture2D" uid="uid://di8dp50u5stut" path="res://art/banner05.png" id="4_lbm8t"]
[ext_resource type="Texture2D" uid="uid://cghmhs4n3bhsc" path="res://art/banner13.png" id="5_dp8is"]
[ext_resource type="Texture2D" uid="uid://chhkt30l2vt4b" path="res://art/banner06.png" id="6_u07tk"]

[node name="ScoreScreen" type="Node"]
script = ExtResource("1_ya0yn")

[node name="P1Area" type="Node2D" parent="."]

[node name="Banner11" type="Sprite2D" parent="P1Area"]
position = Vector2(252, 582)
rotation = -1.57079
scale = Vector2(1.44475, 1.44475)
texture = ExtResource("3_6ifuq")

[node name="P2Area" type="Node2D" parent="."]

[node name="Banner12" type="Sprite2D" parent="P2Area"]
position = Vector2(711, 582)
rotation = -1.57079
scale = Vector2(1.44475, 1.44475)
texture = ExtResource("4_lbm8t")

[node name="P3Area" type="Node2D" parent="."]

[node name="Banner13" type="Sprite2D" parent="P3Area"]
position = Vector2(1179, 584)
rotation = -1.57079
scale = Vector2(1.44475, 1.44475)
texture = ExtResource("5_dp8is")

[node name="P4Area" type="Node2D" parent="."]

[node name="Banner14" type="Sprite2D" parent="P4Area"]
position = Vector2(1655, 582)
rotation = -1.57079
scale = Vector2(1.44475, 1.44475)
texture = ExtResource("6_u07tk")

[node name="P1Points" type="Label" parent="."]
offset_left = 64.0
offset_top = 80.0
offset_right = 633.0
offset_bottom = 304.0
text = "10000"
label_settings = ExtResource("2_tyy6m")
vertical_alignment = 1

[node name="P2Points" type="Label" parent="."]
offset_left = 432.0
offset_top = 327.0
offset_right = 990.0
offset_bottom = 551.0
text = "12000"
label_settings = ExtResource("2_tyy6m")
horizontal_alignment = 1
vertical_alignment = 1

[node name="P3Points" type="Label" parent="."]
offset_left = 904.0
offset_top = 571.0
offset_right = 1474.0
offset_bottom = 795.0
text = "14000"
label_settings = ExtResource("2_tyy6m")
horizontal_alignment = 1
vertical_alignment = 1

[node name="P4Points" type="Label" parent="."]
offset_left = 1256.0
offset_top = 816.0
offset_right = 1832.0
offset_bottom = 1040.0
text = "16000"
label_settings = ExtResource("2_tyy6m")
horizontal_alignment = 2
vertical_alignment = 1
